--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -2,9 +2,11 @@
     <h1>Scratch</h1>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
  <ul>           
-         <li> <a href=../index.html>Home</a></li>
+         <li><a href=../index.html>Home</a></li>
          <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-         <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
+         <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+         <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
+         <li><a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
     </ul>
  <h3>Projects</h3>
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250282013/?autostart=false" frameborder="0" allowfullscreen>
@@ -12,6 +14,7 @@
 
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/251181130/?autostart=false" frameborder="0" allowfullscreen>
 </iframe><p><a href=https://scratch.mit.edu/projects/251181130>Rectangle traverse</a></p>
+
 <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/255704135/?autostart=false" frameborder="0" allowfullscreen>
 </iframe><p><a href=https://scratch.mit.edu/projects/255704135>Sharks!</a></p>
     
@@ -19,9 +22,11 @@
  <ul>
 
      
-        <li> <a href=../index.html>Home</a></li>
+        <li><a href=../index.html>Home</a></li>
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-        <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
+        <li><a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
  </ul>
 </div>
 
