--- a/Collegeinfo/index.html
+++ b/Collegeinfo/index.html
@@ -5,6 +5,8 @@
     <ul>               
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
         <li><a href=../hlep/index.html>Help</a></li>  
     </ul>
     <h2>Portland State</h2>
@@ -19,6 +21,8 @@
 <ul>               
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
         <li><a href=../hlep/index.html>Help</a></li>  
     </ul>
 
