--- a/hlep/index.html
+++ b/hlep/index.html
@@ -9,6 +9,7 @@
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
                 <li><a href=https://scratch.mit.edu>Scratch </a></li>
                 <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+                <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
                 <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
                 <li><a href=https://github.com>Github </a> </li> 
                 </ul>
@@ -18,7 +19,7 @@
         <h2><a style= color:black href=https://scratch.mit.edu>Scratch </a></h2>
         <h2><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></h2>
         <h2><a style= color:black href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></h2>
-
+        <h2><a style= color:black href=https://btetz40.github.io/sketckes/index.html>Sketches</a></h2>
 
 
 
@@ -29,6 +30,7 @@
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
                 <li><a href=https://scratch.mit.edu>Scratch </a></li>
                 <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+                <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
                 <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
                 <li><a href=https://github.com>Github </a> </li> 
                 </ul>
