--- a/sketckes/index.html
+++ b/sketckes/index.html
@@ -9,9 +9,9 @@
         <li><a href=../hlep.index.html>Help</a></li>
     </ul>
     <p>First example (example 2.2) using brackets and pj.5</p>
-    <a href=../sketckes/empty-example/index2.html>Example 2.2</a>
+    <a style= color:black href=../sketckes/empty-example/index2.html><b>Example 2.2</b></a>
     <p>First try at pj5 on my own</p>
-    <a href=../sketckes/empty-example/index.html>My Sketch</a>
+    <a style= color:black href=../sketckes/empty-example/index.html><b>My Sketch</b></a>
 
     <ul>
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
