--- a/hlep/index.html
+++ b/hlep/index.html
@@ -20,6 +20,7 @@
         <h2><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></h2>
         <h2><a style= color:black href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></h2>
         <h2><a style= color:black href=https://btetz40.github.io/sketckes/index.html>Sketches</a></h2>
+        <h2><a style= color:black href=https://docs.google.com/document/d/13uRxtA4Ko7tSbImE8rAQl0-QarZgK-itnr-NEMQYVpw/edit>Mastermind Help</a></h2>
 
 
 
