--- a/python/index.html
+++ b/python/index.html
@@ -8,6 +8,7 @@
     <li><a href=../hlep.index.html>Help</a></li>
 </ul>
 <p><a style= color:black href=https://repl.it/@btetz/FarUpsetAdmins>Rock Paper Scissors</a></p>
+<script src="https://pastebin.com/embed_js/9wS445CP"></script>
 <p><a style= color:black href=>Master Mind</a></p>
 <script src="https://pastebin.com/embed_js/htXFkAxT"></script>
 
