--- a/Collegeinfo/index.html
+++ b/Collegeinfo/index.html
@@ -4,6 +4,8 @@
     <h3> Links</h3>
     <ul>               
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+        <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=../python/index.html>Python Programs</a></li>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
         <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
         <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
@@ -18,14 +20,16 @@
     <img src="afro.jpg" alt="Collegeinfo" style="width:75px;height:75px; border:0;"></a>
     <p>Similar types of degrees with more versatility and more pathways to individualise your education. This link will take you to those options.</p>
 </a>
+
 <ul>               
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+        <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=../python/index.html>Python Programs</a></li>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
         <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
         <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
         <li><a href=../hlep/index.html>Help</a></li>  
     </ul>
-
     
     
 
