--- a/hlep/index.html
+++ b/hlep/index.html
@@ -5,13 +5,12 @@
     <ul>
                 <li><a href=https://btetz40.github.io/index.html>Home </a></li>
                 <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-                <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
-                <li><a href=https://scratch.mit.edu>Scratch </a></li>
+                <li><a href=../python/index.html>Python Programs</a></li>
+                <li><a href=../apinvent/index.html>App inventor</a></li>
                 <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
                 <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
                 <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-                <li><a href=https://github.com>Github </a> </li> 
                 </ul>
         <h2><a style= color:black href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></h2>
         <h2><a style= color:black href=https://github.com>Github </a></h2>
@@ -24,15 +23,14 @@
 
 
 
-    <ul>
+        <ul>
                 <li><a href=https://btetz40.github.io/index.html>Home </a></li>
                 <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-                <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
-                <li><a href=https://scratch.mit.edu>Scratch </a></li>
+                <li><a href=../python/index.html>Python Programs</a></li>
+                <li><a href=../apinvent/index.html>App inventor</a></li>
                 <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
                 <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
                 <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-                <li><a href=https://github.com>Github </a> </li> 
                 </ul>
 </div>
