--- a/python/index.html
+++ b/python/index.html
@@ -2,8 +2,10 @@
 <h1>Python Programs</h1>
 <ul>
     <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+    <li><a href=../apinvent/index.html>App inventor</a></li>
     <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
     <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
+    <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
     <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
     <li><a href=../hlep.index.html>Help</a></li>
 </ul>
@@ -15,10 +17,12 @@
 
 
 <ul>
-    <li><a href=https://btetz40.github.io/index.html>Home </a></li>
-    <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-    <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
-    <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-    <li><a href=../hlep.index.html>Help</a></li>
-</ul>
+        <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+        <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+        <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
+        <li><a href=../hlep.index.html>Help</a></li>
+    </ul>
 </div id="box1">
