--- a/codehs.html
+++ b/codehs.html
@@ -14,7 +14,7 @@
     </ul>
 
 
-<a><img source="codehs.png" alt="codehs" style="width: 1200; height: 1000; border: 10"></a>
+<a><img source="codehs.png" alt="codehs" style="width: 1200px; height: 1000px; border: 10px"></a>
 
 
 
