--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <p><a style= color:black href=../codehs.html>Code Highschool</a></p>
     <p><a style= color:black href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></p>
     <p><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
-    <p><a style= color:black href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a></p>
+    <p><a style= color:black href=../qdocs/qdocs.html></a>Readings</p>
     <p><a style= color:black href=../apinvent/index.html>App Inventor projects</a></p>
     <p><a style= color:black href=https://btetz40.github.io/sketckes/index.html>Sketch</a></p>
     <p><a style= color:black href=../python/index.html>Python Programs</a></p>
     <p><a style= color:black href=https://docs.google.com/document/d/1wg2UkiYIkX6iKOMx1LinZZEEImRdkEWJu27i5mcn4YY/edit?usp=sharing>Grading rubric</a></p>
+    <p><a style= color:black href=../circut/index.html></a></p>
 
     <ul>
             <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
