--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p><a style= color:black href=https://btetz40.github.io/sketckes/index.html>Sketch</a></p>
     <p><a style= color:black href=../python/index.html>Python Programs</a></p>
     <p><a style= color:black href=https://docs.google.com/document/d/1wg2UkiYIkX6iKOMx1LinZZEEImRdkEWJu27i5mcn4YY/edit?usp=sharing>Grading rubric</a></p>
-    <p><a style= color:black href=../circut/index.html></a>Circuts</p>
+    <p><a style= color:black href=https://btetz40.github.io/circut/index.html></a>Circuts</p>
 
     <ul>
             <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
